--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "@cloudinary/react": "^1.11.1",
+    "@cloudinary/url-gen": "^1.9.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
