--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "ArtMart",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -16,12 +16,12 @@
     "@cloudinary/react": "^1.11.1",
     "@cloudinary/url-gen": "^1.9.2",
     "bcrypt": "^5.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
-    "stripe": "^11.14.0",
-    "dotenv":"16.0.3"
+    "stripe": "^11.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
