--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@stripe/stripe-js": "^1.49.0",
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
+    "dotenv": "^16.0.3",
     "http-proxy-middleware": "^2.0.6",
     "install": "^0.13.0",
     "npm": "^9.6.2",
