--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "artmart",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.7.9",
     "@stripe/stripe-js": "^1.49.0",
